--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f1f1f1;
+    background-color: #3f3f3f;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
